<resources>
    <string name="app_name">isaiahgarciaXML</string>
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="button_4_text">4</string>
    <string name="button_5_text">5</string>
    <string name="button_6_text">6</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_9_text">9</string>
    <string name="text_string">Button X</string>
    <string name="text_1">Button 1</string>
    <string name="text_2">Button 2</string>
    <string name="text_3">Button 3</string>
    <string name="text_4">Button 4</string>
    <string name="text_5">Button 5</string>
    <string name="text_6">Button 6</string>
    <string name="text_7">Button 7</string>
    <string name="text_8">Button 8</string>
    <string name="text_9">Button 9</string>
</resources>